--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 	    <footer>
 		    Place food by clicking within the simulation area. Bacteria will always prefer to move towards the closest food. 
 				<br>
-			Bacteria will grow slowly by eating food. Press 'r' to reset the simulation.
+			Bacteria will grow slowly by eating food. The larger a bacteria is, the slower it will move.
+				<br>
+			Press 'r' to reset the simulation.
 	    </footer>
 	</body>
 </html>
